# snakes

./: .gitignore  Makefile.am  README  README.md  armadillo.pc  atlas.pc  configure.ac  main.cpp  sfml.cpp  snake.cpp  snake.h  snake.json
src/: Makefile.am  sfml.cpp  sfml.h  snake.cpp
